2007-04-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed screwed-up palettes in SI mods with custom mainshp.flx files.
	* You can now add/change midi music by placing custom ADLIBMUS.DAT and/or
	  MT32MUS.DAT files in the patch dir.

2007-04-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Improved large-avatar handling, fixing a few bugs it introduced for
	  normal-sized avatars.
	* Improved Actor::Find_Blocking, and modified Actor::move_aside to check
	  the orthogonal directions first.
	* Improved slightly pace schedule.
	* Jukebox eggs now ignore delta-z when determining if they should hatch.

2007-04-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Improved skin scrolling functions.
	* ES now saves differential patches for VGA files. This will NOT affect
	  "patch" VGA files that already exist.
	* ES now exports to/imports from shp files into VGA files.

2007-04-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Avatar skins can now optionally specify whether or not the shape data
	  from the avatar's default skins will overwrite the shape data from the
	  skin's actual shape.
	* Versioning of text data files actually work now.
	* Better handling for movement of larger avatars.

2007-03-31  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added new title screens for Keyring mod and SI Fixes.
	* Added build scripts/instructions for SI Fixes. Also, improved the Keyring
	  make scripts.
	* Added new avatars from Avatar Pack to Keyring mod.
	* You can now patch the keybindings on a per-mod basis. The Keyring mod has
	  been updated to reflect that.
	* Added partial support for patch music files. Ogg files in <PATCH>/music
	  will now be loaded (if they exist) instead of the corresponding ogg from
	  <MUSIC>. Still need to do the same for the midi/xmidi/etc.

2007-03-29  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Allow mainshp.flx patches. Also, slightly synched BG and SI new game code,